--- a/index.html
+++ b/index.html
@@ -125,17 +125,20 @@
       </div>
     </div>
     <div class="foot2">
-      <div class="foot2p">
-        <p>&copy;2022</p>
-      </div>
-      <div class="foot22p">
+     
+      <div class="foot22p isac" id="name">
         <p>HELP</p>
         <p>DONATE</p>
         <p>BLESSED</p>
 
       </div>
+      <div class="foot2p">
+        <p>&copy;2022</p>
+      </div>
     </div>
   </footer>
 </body>
-
+<script>
+  
+</script>
 </html>
