--- a/pages/patientpages/contact.html
+++ b/pages/patientpages/contact.html
@@ -43,7 +43,7 @@
     devaabishek2002@gmail.com</p>
     <h3>address</h3>
     <p> Sathyadev Ave, opp.<br> Chettinad Vidyashram, MRC Nagar<br> Raja Annamalai Puram,<br> Chennai, Tamil Nadu 600028</p>
-    <h2>Contact us for more details and more products</h2>
+    <h2>Contact us for more details and more products after verification from our team you get the product</h2>
 </div>
 </section>
 </body>
