--- a/pages/patientpages/patientlogin.html
+++ b/pages/patientpages/patientlogin.html
@@ -24,18 +24,18 @@
                 <h1>User Login</h1>
                 <hr id="log">
                 <div class="mail">
-                    <p>Email Address</p>
-                    <input type="email" class="text" required>
+                    <p>user name</p>
+                    <input type="name" class="text" id="name" >
 
                 </div>
 
                 <div class="pass">
                     <p>Password</p>
-                    <input type="password" class="password" required>
+                    <input type="password" class="password"  id="password" >
 
                 </div>
                 <hr id="logbtnhr">
-                <a href="../patientpages/gethelp.html"><button class="join">LOGIN</button></a>
+               <button class="join" onclick="isac()">LOGIN</button>
                 <div class="loginimgs">
                     <p>Or Login With</p>
                 </div>
@@ -49,6 +49,27 @@
             </div>
         </div>
     </div>
+    <script>
+      
+      function isac() {
+            const patientloginname = (document.getElementById("name").value);
+            const patientloginpassword = (document.getElementById("password").value);
+            let patientname=localStorage.getItem("patientname");
+            let patientpassword= localStorage.getItem("patientpassword");
+
+            if(patientloginname==patientname){
+                if(patientloginpassword==patientpassword){
+                    window.location.href = "gethelp.html"
+                }
+                else{
+                    alert("incorrect password da panda")
+                }
+            }
+            else{
+            alert("useremailah thappu da")
+            } 
+        }
+            </script>
 </body>
 
 </html>
