--- a/pages/beinspired/inspire.html
+++ b/pages/beinspired/inspire.html
@@ -168,6 +168,9 @@
 </body>
 
 <script>
+
+// comented screenreader beacuse toggle button not coded 
+
 //      let msg = new SpeechSynthesisUtterance();
 // let voices = speechSynthesis.getVoices();
 // msg.voice = voices[0];
@@ -189,6 +192,9 @@
         
 //     });
 // });
+
+// code for if user logged in the nav link to the appropriate page 
+// if user not logged in it lead to login page 
 
 
 let arr = localStorage.getItem("userprofile_name");
