--- a/pages/donarpages/donation.html
+++ b/pages/donarpages/donation.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
 	<title>Donate Now</title>
@@ -71,6 +71,7 @@
 
 <script>
 
+// comented screenreader beacuse toggle button not coded 
 
 // let msg = new SpeechSynthesisUtterance();
 // let voices = speechSynthesis.getVoices();
