--- a/pages/donarpages/involve.html
+++ b/pages/donarpages/involve.html
@@ -135,6 +135,7 @@
     </script>
     <script>
 
+     // comented screenreader beacuse toggle button not coded 
 
       // let msg = new SpeechSynthesisUtterance();
       // let voices = speechSynthesis.getVoices();
