--- a/pages/patientpages/appointment.html
+++ b/pages/patientpages/appointment.html
@@ -98,6 +98,9 @@
   </div>
 </footer>
 <script>
+
+// commented screenreader beacuse toggle button not coded 
+
   // // localStorage.getItem("user_email")
   // // console.log("user_email")
   // const user_email=localStorage.getItem("user_email")
