--- a/pages/patientpages/bookingform.html
+++ b/pages/patientpages/bookingform.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
 	<title>Donate Now</title>
@@ -40,7 +40,7 @@
 	<div class="full book">
 		<div class="container">
 			<!-- <div class="img-container"> -->
-			<h1>Donate Now</h1>
+			<h1>Book Now</h1>
 			<img src="../../assets/images/donateus.jpg" alt="" width="425px" class="bookimg ">
 			<!-- </div> -->
 			<form>
@@ -93,7 +93,7 @@
 		);
 	} 
 
-
+// comented screenreader beacuse toggle button not coded 
 
 	// let msg = new SpeechSynthesisUtterance();
 	// let voices = speechSynthesis.getVoices();
