--- a/pages/patientpages/buyproducts.html
+++ b/pages/patientpages/buyproducts.html
@@ -191,165 +191,167 @@
     // const product_names=["tricycle","wheelchair","hearingaid","artificial limb","crutches","magnifier","bike","stick","blackgoogles"];
     // const abt_products=["here tricycle for you contact to buy","here wheelchair for you contact to buy","here hearingaid for you contact to buy","here artificial limb for you contact to buy","here crutches for you contact to buy","here magnifier for you contact to buy","here bike for you contact to buy","here stick for you contact to buy","here black googles for you contact to buy"]
 
-    let products = [
-      {
-        product_images:
-        {
-          "source": "../../assets/images/tricycle.png",
-          "alternatetext": "tricycleimage"
-        },
-        product_name: "tricycle",
-        abt_products: " tricycle for you contact to buy"
-      },
-      {
-        product_images:
-        {
-          "source": "../../assets/images/wheelchair.jfif",
-          "alternatetext": "wheelchairimage"
-        },
-        product_name: "wheelchair",
-        abt_products: " wheelchair for you contact to buy"
-      },
-      {
+    // let products = [
+    //   {
+    //     product_images:
+    //     {
+    //       "source": "../../assets/images/tricycle.png",
+    //       "alternatetext": "tricycleimage"
+    //     },
+    //     product_name: "tricycle",
+    //     abt_products: " tricycle for you contact to buy"
+    //   },
+    //   {
+    //     product_images:
+    //     {
+    //       "source": "../../assets/images/wheelchair.jfif",
+    //       "alternatetext": "wheelchairimage"
+    //     },
+    //     product_name: "wheelchair",
+    //     abt_products: " wheelchair for you contact to buy"
+    //   },
+    //   {
 
-        product_images:
-        {
-          "source": "../../assets/images/Special hearing aids.jpg",
-          "alternatetext": "hearingaidimage"
-        },
-        product_name: "hearingaid",
-        abt_products: " hearing aid for you contact to buy"
-      },
-      {
-        product_images:
-        {
-          "source": "../../assets/images/Crutches.jpg",
-          "alternatetext": "crutchesimage"
-        },
-        product_name: "Crutches",
-        abt_products: " Crutches for you contact to buy"
-      },
-      {
-        product_images: {
-          "source": "../../assets/images/Magnifier for visually impaired students.jpg",
-          "alternatetext": "magnifierimage"
-        },
-        product_name: "Magnifier",
-        abt_products: " Magnifier for you contact to buy"
-      },
-      {
-        product_images: {
-          "source": "../../assets/images/bike1.jpg",
-          "alternatetext": "bikeimage"
-        },
-        product_name: "bike",
-        abt_products: " bike for you contact to buy"
-      },
-      {
-        product_images: {
-          "source": "../../assets/images/stick.jpg",
-          "alternatetext": "stickimage"
-        },
-        product_name: "stick",
-        abt_products: " stick for you contact to buy"
-      },
-      {
-        product_images: {
-          "source": "../../assets/images/black.jpg",
-          "alternatetext": "blackimage"
-        },
-        product_name: "googles",
-        abt_products: " googles for you contact to buy"
-      },
-      {
-        product_images: {
-          "source": "../../assets/images/Artificial limbs.jpg",
-          "alternatetext": "limbsimage"
-        },
-        product_name: "Artificial limbs",
-        abt_products: " Artificial limbs for you contact to buy"
-      },
+    //     product_images:
+    //     {
+    //       "source": "../../assets/images/Special hearing aids.jpg",
+    //       "alternatetext": "hearingaidimage"
+    //     },
+    //     product_name: "hearingaid",
+    //     abt_products: " hearing aid for you contact to buy"
+    //   },
+    //   {
+    //     product_images:
+    //     {
+    //       "source": "../../assets/images/Crutches.jpg",
+    //       "alternatetext": "crutchesimage"
+    //     },
+    //     product_name: "Crutches",
+    //     abt_products: " Crutches for you contact to buy"
+    //   },
+    //   {
+    //     product_images: {
+    //       "source": "../../assets/images/Magnifier for visually impaired students.jpg",
+    //       "alternatetext": "magnifierimage"
+    //     },
+    //     product_name: "Magnifier",
+    //     abt_products: " Magnifier for you contact to buy"
+    //   },
+    //   {
+    //     product_images: {
+    //       "source": "../../assets/images/bike1.jpg",
+    //       "alternatetext": "bikeimage"
+    //     },
+    //     product_name: "bike",
+    //     abt_products: " bike for you contact to buy"
+    //   },
+    //   {
+    //     product_images: {
+    //       "source": "../../assets/images/stick.jpg",
+    //       "alternatetext": "stickimage"
+    //     },
+    //     product_name: "stick",
+    //     abt_products: " stick for you contact to buy"
+    //   },
+    //   {
+    //     product_images: {
+    //       "source": "../../assets/images/black.jpg",
+    //       "alternatetext": "blackimage"
+    //     },
+    //     product_name: "googles",
+    //     abt_products: " googles for you contact to buy"
+    //   },
+    //   {
+    //     product_images: {
+    //       "source": "../../assets/images/Artificial limbs.jpg",
+    //       "alternatetext": "limbsimage"
+    //     },
+    //     product_name: "Artificial limbs",
+    //     abt_products: " Artificial limbs for you contact to buy"
+    //   },
 
-      {
-        product_images:
-        {
-          "source": "../../assets/images/tricycle.png",
-          "alternatetext": "tricycleimage"
-        },
-        product_name: "tricycle",
-        abt_products: " tricycle for you contact to buy"
-      },
-      {
-        product_images:
-        {
-          "source": "../../assets/images/wheelchair.jfif",
-          "alternatetext": "wheelchairimage"
-        },
-        product_name: "wheelchair",
-        abt_products: " wheelchair for you contact to buy"
-      },
-      {
+    //   {
+    //     product_images:
+    //     {
+    //       "source": "../../assets/images/tricycle.png",
+    //       "alternatetext": "tricycleimage"
+    //     },
+    //     product_name: "tricycle",
+    //     abt_products: " tricycle for you contact to buy"
+    //   },
+    //   {
+    //     product_images:
+    //     {
+    //       "source": "../../assets/images/wheelchair.jfif",
+    //       "alternatetext": "wheelchairimage"
+    //     },
+    //     product_name: "wheelchair",
+    //     abt_products: " wheelchair for you contact to buy"
+    //   },
+    //   {
 
-        product_images:
-        {
-          "source": "../../assets/images/Special hearing aids.jpg",
-          "alternatetext": "hearingaidimage"
-        },
-        product_name: "hearingaid",
-        abt_products: " hearing aid for you contact to buy"
-      },
-      {
-        product_images:
-        {
-          "source": "../../assets/images/Crutches.jpg",
-          "alternatetext": "crutchesimage"
-        },
-        product_name: "Crutches",
-        abt_products: " Crutches for you contact to buy"
-      },
-      {
-        product_images: {
-          "source": "../../assets/images/Magnifier for visually impaired students.jpg",
-          "alternatetext": "magnifierimage"
-        },
-        product_name: "Magnifier",
-        abt_products: " Magnifier for you contact to buy"
-      },
-      {
-        product_images: {
-          "source": "../../assets/images/bike1.jpg",
-          "alternatetext": "bikeimage"
-        },
-        product_name: "bike",
-        abt_products: " bike for you contact to buy"
-      },
-      {
-        product_images: {
-          "source": "../../assets/images/stick.jpg",
-          "alternatetext": "stickimage"
-        },
-        product_name: "stick",
-        abt_products: " stick for you contact to buy"
-      },
-      {
-        product_images: {
-          "source": "../../assets/images/black.jpg",
-          "alternatetext": "blackimage"
-        },
-        product_name: "googles",
-        abt_products: " googles for you contact to buy"
-      },
-      {
-        product_images: {
-          "source": "../../assets/images/Artificial limbs.jpg",
-          "alternatetext": "limbsimage"
-        },
-        product_name: "Artificial limbs",
-        abt_products: " Artificial limbs for you contact to buy"
-      },
-    ]
-    let new_request = JSON.parse(localStorage.getItem("productrequest"))
-    products = products.concat(new_request)
+    //     product_images:
+    //     {
+    //       "source": "../../assets/images/Special hearing aids.jpg",
+    //       "alternatetext": "hearingaidimage"
+    //     },
+    //     product_name: "hearingaid",
+    //     abt_products: " hearing aid for you contact to buy"
+    //   },
+    //   {
+    //     product_images:
+    //     {
+    //       "source": "../../assets/images/Crutches.jpg",
+    //       "alternatetext": "crutchesimage"
+    //     },
+    //     product_name: "Crutches",
+    //     abt_products: " Crutches for you contact to buy"
+    //   },
+    //   {
+    //     product_images: {
+    //       "source": "../../assets/images/Magnifier for visually impaired students.jpg",
+    //       "alternatetext": "magnifierimage"
+    //     },
+    //     product_name: "Magnifier",
+    //     abt_products: " Magnifier for you contact to buy"
+    //   },
+    //   {
+    //     product_images: {
+    //       "source": "../../assets/images/bike1.jpg",
+    //       "alternatetext": "bikeimage"
+    //     },
+    //     product_name: "bike",
+    //     abt_products: " bike for you contact to buy"
+    //   },
+    //   {
+    //     product_images: {
+    //       "source": "../../assets/images/stick.jpg",
+    //       "alternatetext": "stickimage"
+    //     },
+    //     product_name: "stick",
+    //     abt_products: " stick for you contact to buy"
+    //   },
+    //   {
+    //     product_images: {
+    //       "source": "../../assets/images/black.jpg",
+    //       "alternatetext": "blackimage"
+    //     },
+    //     product_name: "googles",
+    //     abt_products: " googles for you contact to buy"
+    //   },
+    //   {
+    //     product_images: {
+    //       "source": "../../assets/images/Artificial limbs.jpg",
+    //       "alternatetext": "limbsimage"
+    //     },
+    //     product_name: "Artificial limbs",
+    //     abt_products: " Artificial limbs for you contact to buy"
+    //   },
+    // ]
+    // let new_request = JSON.parse(localStorage.getItem("productrequest"))
+    // products = products.concat(new_request)
+    products =JSON.parse(localStorage.getItem("productrequest"))
+
 
     for (let i = 0; i < products.length; i++) {
 
@@ -363,8 +365,8 @@
 
       //  <img src="" alt=""/>
       img_cards = document.createElement("img");
-      img_cards.setAttribute("src", products[i]["product_images"]["source"]);
-      img_cards.setAttribute("alt", products[i]["product_images"]["alternatetext"]);
+      img_cards.setAttribute("src", products[i].image1.source);
+      img_cards.setAttribute("alt", products[i].image1.alt);
       div_products.append(img_cards);
 
 
@@ -376,7 +378,7 @@
 
       //  <p class="card-text"> </p>
       p_card_text = document.createElement("p");
-      p_card_text.innerText = products[i].abt_products;
+      p_card_text.innerText = products[i].product_des;
       div_products.append(p_card_text);
 
 
@@ -392,6 +394,9 @@
 
       document.querySelector("section.sec3").append(div_products);
     }
+
+// comented screenreader beacuse toggle button not coded 
+
 
     //     let tags=document.querySelectorAll('h1');
     //     // let msg;
