--- a/pages/patientpages/contact.html
+++ b/pages/patientpages/contact.html
@@ -50,6 +50,8 @@
     <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script>
 
+// comented screenreader beacuse toggle button not coded 
+
         // let msg = new SpeechSynthesisUtterance();
         // let voices = speechSynthesis.getVoices();
         // msg.voice = voices[0];
