--- a/pages/patientpages/gethelp.html
+++ b/pages/patientpages/gethelp.html
@@ -207,6 +207,9 @@
   </footer>
 </body>
 <script>
+
+// comented screenreader beacuse toggle button not coded 
+
 //      let msg = new SpeechSynthesisUtterance();
 // let voices = speechSynthesis.getVoices();
 // msg.voice = voices[0];
