--- a/pages/patientpages/govt.html
+++ b/pages/patientpages/govt.html
@@ -277,6 +277,8 @@
 </body>
 
 <script>
+
+    // comented screenreader beacuse toggle button not coded 
     
 //     let msg = new SpeechSynthesisUtterance();
 // let voices = speechSynthesis.getVoices();
@@ -297,7 +299,11 @@
 //         }, 100);
         
 //     });
-// });   
+// });  
+
+
+// code for if user logged in the nav link to the appropriate page 
+// if user not logged in it lead to login page 
 
      let arr = localStorage.getItem("userprofile_name");
      console.log(arr)
