--- a/pages/volunteerpages/signup.html
+++ b/pages/volunteerpages/signup.html
@@ -93,6 +93,10 @@
 
 
     <script>
+
+// comented screenreader beacuse toggle button not coded 
+
+
 //   starting of speechSynthesis
 // let msg = new SpeechSynthesisUtterance();
 // let voices = speechSynthesis.getVoices();
