--- a/pages/volunteerpages/volunteerwork.html
+++ b/pages/volunteerpages/volunteerwork.html
@@ -144,6 +144,9 @@
       </footer>
       <script>
         
+ // comented screenreader beacuse toggle button not coded 
+
+
 //         let msg = new SpeechSynthesisUtterance();
 // let voices = speechSynthesis.getVoices();
 // msg.voice = voices[0];
