--- a/pages/about/aboutus.html
+++ b/pages/about/aboutus.html
@@ -141,7 +141,7 @@
       </script>
       <script>
 
-
+// comented screenreader beacuse toggle button not coded 
 
 // let msg = new SpeechSynthesisUtterance();
 // let voices = speechSynthesis.getVoices();
@@ -165,13 +165,19 @@
         
 //     });
 // });
+
+// code for if user logged in the nav link to the appropriate page 
+// if user not logged in it lead to login page 
+
+
 let arr = localStorage.getItem("userprofile_name");
-     console.log(arr)
-    // let arr2=JSON.parse(localStorage.getItem("volprofile_name"));
+    //  getting id 
     let gethelp=  document.getElementById("gethelp");
     let donation=  document.getElementById("donationlink");
     let beinspired=document.getElementById("beinspiredlink");
    let profile=document.getElementById("myprofile");
+
+    //  if arr not equal to null page go to apporpirate page  
 
     if(arr==null){
     
