--- a/pages/about/apply.html
+++ b/pages/about/apply.html
@@ -117,6 +117,8 @@
       </footer>
       </body>
       <script>
+        // comented screenreader beacuse toggle button nt coded 
+
 //            let msg = new SpeechSynthesisUtterance();
 // let voices = speechSynthesis.getVoices();
 // msg.voice = voices[0];
@@ -139,15 +141,21 @@
 //     });
 // });
 
+
+// code for if user logged in the nav link to the appropriate page 
+// if user not logged in it lead to login page 
+
 let arr = localStorage.getItem("userprofile_name");
-     console.log(arr)
+    
+// getting id 
 
-
-    // let arr2=JSON.parse(localStorage.getItem("volprofile_name"));
     let gethelp=  document.getElementById("gethelp");
     let donation=  document.getElementById("donationlink");
     let beinspired=document.getElementById("beinspiredlink");
    let profile=document.getElementById("myprofile");
+
+    //  if arr not equal to null page go to apporpirate page  
+
 
     if(arr==null){
     
