--- a/pages/about/schemes.html
+++ b/pages/about/schemes.html
@@ -109,6 +109,9 @@
       </footer>
    
       <script>
+
+      // comented screenreader beacuse toggle button nt coded 
+
 //             let msg = new SpeechSynthesisUtterance();
 // let voices = speechSynthesis.getVoices();
 // msg.voice = voices[0];
@@ -131,9 +134,12 @@
 //     });
 // });
 
+// code for if user logged in the nav link to the appropriate page 
+// if user not logged in it lead to login page 
+
 
 let arr = localStorage.getItem("userprofile_name");
-     console.log(arr)
+     
     // let arr2=JSON.parse(localStorage.getItem("volprofile_name"));
     let gethelp=  document.getElementById("gethelp");
     let donation=  document.getElementById("donationlink");
