--- a/pages/donarpages/donationmail.html
+++ b/pages/donarpages/donationmail.html
@@ -50,6 +50,7 @@
     <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script>
 
+// comented screenreader beacuse toggle button not coded 
 
 // let msg = new SpeechSynthesisUtterance();
 // let voices = speechSynthesis.getVoices();
