--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@400;700;900&display=swap" rel="stylesheet">
   <title>freshtrust</title>
   <link rel="icon" href="assets/images/icon.png">
-  <source src="main.js">
+ <script src="main.js"></script>
   
   
 </head>
