--- a/requestfrom.html
+++ b/requestfrom.html
@@ -254,7 +254,7 @@ button2.addEventListener("click", e=>{
 })
 function add_product(){
   let request_img1=document.getElementById("request_img1").value
-  let img_alt1=document.getElementById("img_alt1").value
+  let img_alt1=document.getElementById("img_alt").value
   let request_img2=document.getElementById("request_img2").value
   let img_alt2=document.getElementById("img_alt2").value
   let request_img3=document.getElementById("request_img3").value
@@ -286,7 +286,7 @@ function add_product(){
   //   "requests_images":request_img,
   //  "img_alt":img_alt,
     "product_name":product_title,
-    "abt_products":about_product,
+    "product_des":about_product,
     "feature1":feature
   };
 
